alert_sender.log
📱 Alert sender started
📱 Alert sender started
📱 Alert sender started
Traceback (most recent call last):
  File "/root/Dex-trading-bot/alert_sender.py", line 1, in <module>
    from trading_constants import EXIT_PLAN_TEXT, TP1_SELL_PCT, POSITION_SIZE, SIM_RESET_TIMESTAMP, CHRIS_STARTING_BALANCE
  File "/root/Dex-trading-bot/trading_constants.py", line 2
    """
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 103)
Traceback (most recent call last):
  File "/root/Dex-trading-bot/alert_sender.py", line 1, in <module>
    from trading_constants import EXIT_PLAN_TEXT, TP1_SELL_PCT, POSITION_SIZE, SIM_RESET_TIMESTAMP, CHRIS_STARTING_BALANCE
  File "/root/Dex-trading-bot/trading_constants.py", line 2
    """
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 103)
Traceback (most recent call last):
  File "/root/Dex-trading-bot/alert_sender.py", line 1, in <module>
    from trading_constants import EXIT_PLAN_TEXT, TP1_SELL_PCT, POSITION_SIZE, SIM_RESET_TIMESTAMP, CHRIS_STARTING_BALANCE
ImportError: cannot import name 'EXIT_PLAN_TEXT' from 'trading_constants' (/root/Dex-trading-bot/trading_constants.py)
📱 Alert sender started
